# aoc2024_rust

./: .gitignore  Cargo.toml  README.md
examples/ferris/: main.rs
src/: day01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_15.rs  lib.rs  main.rs
src/day_01/: day01.rs
src/day_02/: day02.rs  day02_nom.rs  day02_part1_nom.rs  rules.txt
src/day_02_2023/: day02.rs  day02_2023.rs  day02_2023_nom.rs
src/day_03/: day03.rs
src/day_03_2023/: day03.rs
src/day_04/: day04.rs  day04_matrix_attempt.rs  rotate_45.rs
src/day_05/: day05.rs
src/day_06/: day06.rs
src/day_07/: day07.rs
src/day_08/: day08.rs
src/day_09/: day09.rs
src/day_10/: day10.rs
src/day_11/: day11.rs
src/day_12/: day12.rs  day12_linear.rs
src/day_13/: cramers_rule.md  day13.rs
src/day_14/: day14.rs
src/day_15/: day15.rs
