[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#glam = "0.29.2"
itertools = "0.14.0"
#nom = "7.1.3"
#nom_locate = "4.2.0"
colored = "3.0.0"
regex = "1.11.1"
rayon = "1.10.0"
aocutils = { path = "../aocutils" }
plotters = "0.3.7"

bevy = "0.15.2"

[[bin]]
name = "day_01"
[[bin]]
name = "day_02"
[[bin]]
name = "day_03"
[[bin]]
name = "day_04"
[[bin]]
name = "day_05"
[[bin]]
name = "day_06"
[[bin]]
name = "day_07"
[[bin]]
name = "day_08"
[[bin]]
name = "day_09"
[[bin]]
name = "day_10"
[[bin]]
name = "day_11"
[[bin]]
name = "day_12"
[[bin]]
name = "day_13"
[[bin]]
name = "day_14"
[[bin]]
name = "day_15"
