[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
colored = "3.0.0"
regex = "1.11.1"
rayon = "1.10.0"
aocutils = { path = "../aocutils" }
plotters = "0.3.7"
sdl3 = "0.14.11"

[[bin]]
name = "day01"
[[bin]]
name = "day02"
[[bin]]
name = "day03"
[[bin]]
name = "day04"
[[bin]]
name = "day05"
[[bin]]
name = "day06"
[[bin]]
name = "day07"
[[bin]]
name = "day08"
[[bin]]
name = "day09"
[[bin]]
name = "day10"
[[bin]]
name = "day11"
[[bin]]
name = "day12"
[[bin]]
name = "day13"
[[bin]]
name = "day14"
[[bin]]
name = "day15"
